--- a/views/transportation.erb
+++ b/views/transportation.erb
@@ -60,7 +60,7 @@
 
 
 <% end %>
-<h1>Score: <%=@player.score%> out of: <%=@player.counter%> </h1>
+<h1>Score: <%=@player.score%> out of <%=@player.counter%> </h1>
 
 <div class="bicycle">
   <div class="bicycle-frame">
