--- a/views/lunch.erb
+++ b/views/lunch.erb
@@ -18,7 +18,7 @@
       <form class="correct" action="/player/<%=@player.id%>" method="post">
         <input type="hidden" name="last_question" value="<%=@question.id%>">
         <input type="hidden" name="_method" value="patch">
-        <input type="hidden" name="answer" value="1">
+        <input type="hidden" name="answer" value="0">
         <button class="this-human" type="submit" name="button">This Human</button>
       </form>
     </div>
@@ -27,7 +27,7 @@
       <form class="wrong" action="/player/<%=@player.id%>" method="post">
         <input type="hidden" name="last_question" value="<%=@question.id%>">
         <input type="hidden" name="_method" value="patch">
-        <input type="hidden" name="answer" value="0">
+        <input type="hidden" name="answer" value="1">
         <button class="this-human" type="submit" name="button">This Human</button>
       </form>
     </div>
@@ -60,7 +60,7 @@
 
 <% end %>
 
-<h1>Score: <%=@player.score%> out of: <%=@player.counter%> </h1>
+<h1>Score: <%=@player.score%> out of <%=@player.counter%> </h1>
 <div class="burger">
   <div class="burger-layers">
     <img src="/img/burger.png" alt="burger... possibly vegan"/>
