--- a/views/result.erb
+++ b/views/result.erb
@@ -1,12 +1,18 @@
-<div class="result-container">
-  <h1>Thank you for playing Ice Pick!</h1>
-  <p>Get to know your classmates</p>
+<div class="result-wrap">
+  <div class="result-container">
+    <h1>Thank you for playing Ice Pick!</h1>
+    <p>Get to know your classmates</p>
+    <a href="/"><button class="start-quiz-button" type="submit" name="button">Play Again!</button></a>
+  </div>
+  <div class="result-list-container">
+    <h1 class="score-heading">Your Score: <%=@player.score%> out of <%=@player.counter%> </h1>
 
-  <form class="" action="/player/<%=@player.id%>/reset" method="post">
-    <button class="start-quiz-button" type="submit" name="button">Play Ice Pick Again!</button>
-  </form>
-
-  <!-- <h1>score <%=@player.score()%></h1> -->
-  <h1>Score: <%=@player.score%> out of: <%=@player.counter%> </h1>
-
+    <br>
+    <h1 class="result-heading">High Scores</h1>
+    <ul class="result-list">
+      <% @players.each do |player| %>
+      <li><%= player.player_name() %> : <%= player.score() %> out of 10</li>
+      <% end %>
+    </ul>
+  </div>
 </div>
