--- a/views/sleeping.erb
+++ b/views/sleeping.erb
@@ -59,7 +59,7 @@
 
 <% end %>
 
-<h1>Score: <%=@player.score%> out of: <%=@player.counter%> </h1>
+<h1>Score: <%=@player.score%> out of <%=@player.counter%> </h1>
 
 <div class="sleep-animation">
   <div class="couch">
